# HawkEars

./: .gitignore  AGENTS.md  LICENSE  LICENSE.txt  README.md  analyze.py  creating_your_own_classifier.md  mypy.ini  perch.py  pyproject.toml  pytest.ini  requirements.txt  species_handlers.py  train.py  version.txt
core/: __init__.py  audio.py  base_config.py  configs.py  data_module.py  database.py  dataset.py  extractor.py  filters.py  frequency_db.py  metrics.py  occurrence_db.py  plot.py  util.py
data/: classes.txt  ignore.txt  species_codes.csv
data/ckpt/: custom_mobile_1.ckpt  custom_vovnet_2.ckpt  repvit_m2.ckpt  tf_efficientnet_b0.ckpt
install/canada/data/: classes.csv  exclude.txt  locations.db
install/canada/data/ckpt-low-band/: dla1.ckpt  vov1.ckpt  vov1A.ckpt  vov1A.onnx  vov1B.ckpt  vov1C.ckpt
install/canada/yaml/: default-cpu.yaml  default-mps.yaml  default.yaml  low_band.yaml
model/: dla.py  efficientnet_v2.py  fastvit.py  gernet.py  hgnet_v2.py  main_model.py  mobilenet.py  repvit.py  vovnet.py
region-data/canada/: administrative_areas.json
scripts/: cfg_to_yaml.py  check_code.sh  generate_readme.py
src/hawkears/: __about__.py  __init__.py  cli.py
src/hawkears/commands/: __init__.py  _analyze.py  _gui.py  _init.py
src/hawkears/core/: __init__.py  analysis_result.py  analyzer.py  class_info.py  class_manager.py  config.py  config_loader.py  occurrence_manager.py
src/hawkears/gui/: __init__.py  app.py  diagnostics.py  i18n.py
src/hawkears/gui/database/: __init__.py  connection.py  database.py  errors.py  records.py  schema.py
src/hawkears/gui/database/migrations/: 001_initial.sql  002_recording_scope.sql  003_analysis_item_location.sql  004_review_queue.sql  005_stratified_review_queue.sql  006_review_queue_order.sql  007_location_date_review_queue.sql  008_analysis_import.sql  009_random_review_queue.sql  010_duration_ranked_review_queue.sql  011_percentile_review_queue.sql  012_diel_review_queue.sql  013_location_max_count_review_queue.sql  014_location_max_score_sum_review_queue.sql  015_location_max_score_review_queue.sql  016_location_first_date_review_queue.sql  017_location_date_high_score_review_queue.sql  018_location_date_first_detection_review_queue.sql  019_confirmation_aware_review.sql  020_confirmation_toggle.sql  __init__.py
src/hawkears/gui/database/repositories/: __init__.py  analysis_repository.py  detection_repository.py  import_repository.py  project_repository.py  recording_repository.py  review_queue_repository.py  species_repository.py
src/hawkears/gui/services/: __init__.py  analysis_runner.py  class_catalog.py  import_runner.py  location_catalog.py  result_importer.py  spectrogram.py
src/hawkears/gui/translations/: README.md  __init__.py
src/hawkears/gui/ui/: __init__.py  location_dialog.py  main_window.py  review_export_dialog.py  review_queue_dialog.py  species_dialog.py  theme.py
src/hawkears/gui/ui/resources/: __init__.py
src/hawkears/heuristics/: base.py
src/hawkears/heuristics/canada/: boost_scores.py  low_band.py  lower_scores.py  main.py  soundalike.py
src/hawkears/species_handlers/: base.py
src/hawkears/species_handlers/canada/: low_band.py  main.py  soundalike.py
testing/: base_tester.py  per_minute_tester.py  per_recording_tester.py  per_second_tester.py  per_segment_tester.py  per_sound_tester.py  test_base_tester.py  test_per_minute.py  test_per_recording.py  test_per_sound.py
tests/: test_analysis_runner.py  test_analyzer_api.py  test_class_catalog.py  test_class_manager.py  test_cli.py  test_gui_database.py  test_import_runner.py  test_init.py  test_location_catalog.py  test_location_dialog.py  test_occurrence_manager.py  test_result_importer.py  test_review_spectrogram_view.py  test_spectrogram.py
tests/data/: exclude-basic.txt  filelist1.csv  include-two.txt
tools/: calibrate.py  cluster.py  del_recording.py  downsample.py  embed.py  extract_all.py  extract_auto.py  extract_by_image.py  find_dup_recordings.py  inat.py  merge_test.py  pickle_db.py  pickle_merge.py  pickle_spec.py  pickle_test.py  plot_calibration_curve.py  plot_filter.py  plot_from_db.py  plot_labels.py  plot_recordings.py  read_embeddings.py  reextract.py  rpt_labels.py  search.py  ssw0-test.py  ssw0_test.py  torch2onnx.py  xeno.py
