[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawkears"
dynamic = ["version"]
description = 'Bioacoustic classifier for Canada and the northern United States.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Jan Huus", email = "jhuus1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "britekit>=1.6.0,<1.7",
  "click>=8.1,<8.3",
  "numpy>=2.0,<2.4",
  "omegaconf>=2.3,<3.0",
  "onnx>=1.18,<2.0",
  "pandas>=2.0,<3.0; python_version < '3.14'",
  "pandas>=2.3.3,<3.0; python_version >= '3.14'",
  "polars>=1.30,<2.0",
  "PySide6>=6.8,<7",
  "scipy>=1.13,<2.0",
  "soundfile>=0.12,<1"
]

[project.scripts]
hawkears = "hawkears.cli:cli"
hawkears-gui = "hawkears.gui.app:main"

[project.urls]
Documentation = "https://github.com/jhuus/HawkEars#readme"
Issues = "https://github.com/jhuus/HawkEars/issues"
Source = "https://github.com/jhuus/HawkEars"

[tool.hatch.version]
path = "src/hawkears/__about__.py"

[tool.hatch.envs.hawkears]
dependencies = [
  "pytest>=8.3.5",
  "black>=25.0.0",
  "ruff>=0.11.12",
  "mypy>=1.0.0",
  "twine>=6.1.0",
  "types-PyYAML",
  "types-requests",
]

post-install-commands = [
  "pip install -e .",
]

[tool.hatch.envs.hawkears.scripts]
test = "pytest {args:tests}"
format = "black src tests"
lint = "ruff check src tests"
typecheck = "mypy src tests"
check = "black --check src tests && ruff check src tests && mypy src tests"
translations = "pyside6-lupdate -extensions py src/hawkears/gui/app.py src/hawkears/gui/ui -ts {args:src/hawkears/gui/translations/hawkears.ts}"
translations-compile = "pyside6-lrelease src/hawkears/gui/translations/*.ts"

[tool.hatch.build]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/hawkears"]

# Ensure non-Python sample assets are included in the wheel so
# importlib.resources.files("hawkears.install") can access them.
[tool.hatch.build.targets.wheel.force-include]
"install" = "hawkears/install"

[tool.hatch.build.targets.sdist]
only-include = [
  "src/hawkears",
  "install",
]

[tool.hatch.build.targets.sdist.force-include]
"install" = "hawkears/install"

[tool.coverage.run]
source_pkgs = ["hawkears", "tests"]
branch = true
parallel = true
omit = [
  "src/hawkears/__about__.py",
]

[tool.coverage.paths]
hawkears = ["src/hawkears", "*/hawkears/src/hawkears"]
tests = ["tests", "*/hawkears/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
